# iceball

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CREDITS.txt  LICENCE-others.txt  Makefile  Makefile.dedi  Makefile.glmingw  Makefile.glosx-clang  Makefile.mingw  Makefile.mingw12  Makefile.opengl  Makefile.osx  Makefile.sdl12  README.md  README.txt  appveyor_build.ps1  bigzipdist.sh  common.h  config.h  connect-rakiru.bat  findlua.sh  genmanual.py  iceball-icon.xcf  img.c  json.c  listfile.txt  lua.c  lua_base.h  lua_camera.h  lua_fetch.h  lua_image.h  lua_input.h  lua_json.h  lua_map.h  lua_model.h  lua_net.h  main.c  main.make  (+27 more)
buildenv/: vs2k10.bat  vs2k8.bat
clsave/: config.json  info.txt
clsave/pub/: controls.json  user.json
clsave/vol/: fastload.tmp
cmake/: FindENet.cmake  FindLua.cmake  FindSDL2.cmake  Findsackit.cmake
cmake/hunter/: config.cmake
deploy/: bigzipdist.sh  iblauncher.c  package-osx.sh  wmklauncher.sh  zipdist.sh
deploy/osx-package-files/: iceball-launcher
dlcache/: info.txt
docs/: 00README.txt  READ_THIS_FIRST.txt  api_gui.txt  changelog.txt  citygen_docs.txt  dev_styleguide.txt  editor_map.txt  editor_pmf.txt  format_icemap.txt  format_icemap_mapents.txt  format_pmf.txt  gui_design.txt  lib_event.txt  modding_101.txt  modding_lua.txt  modding_scripts.txt  opengl_renderer.txt  proto_heart.txt  proto_main.txt  proto_udpwrap.txt  setup_json.txt  strats_wiki.txt  thehole_changelog.txt  troubleshooting.txt
heart/: heartbeat.py  server-priorities.json  servers.json  servers.json.example  style.css
include/: common.h  lua_camera.h
include/glad/: glad.h
msrc/: index.py
msrc/guide/: where.py
msrc/main/: changelog.py  credits.py  lic.py  req.py
msrc/tut/: cmd.py  play.py  rtfm.py
msvc/: iceball.sln  iceball.vcproj
osx-package-files/: Iceball.icns  Info.plist  iceball-launcher
pkg/base/: banned_client.lua  border.lua  client_start.lua  commands.lua  common.lua  gen_classic.lua  gen_flat.lua  lang_en.lua  lib_bits.lua  lib_collect.lua  lib_crosshair.lua  lib_cside.lua  lib_fastload.lua  lib_font.lua  lib_gui.lua  lib_heartbeat.lua  lib_map.lua  lib_mods.lua  lib_namegen.lua  lib_pmf.lua  lib_sdlkey.lua  lib_shader.lua  lib_util.lua  lib_va.lua  lib_vector.lua  lib_widget.lua  main_client.lua  main_server.lua  network.lua  obj_bomb.lua  obj_intent.lua  obj_nade.lua  obj_particle.lua  obj_player.lua  plug_pmfedit.lua  plug_snow.lua  preconf.lua  serpent.lua  version.lua
pkg/base/citygen/: gen_city.lua  modes.json
pkg/base/ent/: expl_bomb.lua  expl_grenade.lua  gun_leerifle.lua  gun_rifle.lua  tool_block.lua  tool_grenade.lua  tool_marker.lua  tool_spade.lua  tool_template.lua  tpl_gun.lua
pkg/base/gfx/: banned.tga  chevron.tga  crosshair.tga  crosshair.xcf  crosshairhit.tga  crosshairhit.xcf  font-large.xcf  font-mini.tga  font-mini.xcf  font-numbers.psd  font-numbers.tga  font-numbers.xcf  loading_default-128c.tga  loading_default-256c.tga  loading_default-64c.tga  loading_default.tga  roundrect.tga  roundrect.xcf
pkg/base/icegui/: widgets.lua
pkg/base/it/: music.it
pkg/base/kv6/: block.kv6  bomb.kv6  cube.kv6  flagpole.kv6  intel.kv6  nade.kv6  playerarm.kv6  playerbody.kv6  playerhead.kv6  playerheadalt.kv6  playerleg.kv6  rifle.kv6  shotgun.kv6  shotgunreloading.kv6  spade.kv6  tracer.kv6
pkg/base/mode/: mode_1ctf.lua  mode_ctf.lua  mode_lts.lua  mode_r1ctf.lua  mode_tdm.lua  obj_intel.lua  obj_tent.lua
pkg/base/pmf/: LeeRifle.pmf  Xcube.pmf  block.pmf  bomb.pmf  cube.pmf  hitind.pmf  intel.pmf  leerifle.pmf  marker.pmf  nade.pmf  piano.pmf  player.pmf  rifle.pmf  spade.pmf  tent.pmf  test.pmf  tracer.pmf
pkg/base/sandbox/: fetch.lua  gfx.lua  main.lua  wav.lua
pkg/base/shader/: .world_diff.lua.swp  img.lua  misc_diff.lua  post_simple.lua  post_stereo.lua  post_toon.lua  simple.lua  white.lua  world_diff.lua
pkg/base/wav/: SOUNDLICENSE.txt
pkg/br/smg/: gun_smg.lua  main.lua  smg.pmf  sound license.txt
pkg/br/snake/: heartbeat.lua  main_client.lua  main_server.lua  mod.json  mod_sandbox.lua
pkg/gm/abos/: common.lua  genmap.lua  main_client.lua  main_server.lua  player.lua
pkg/gm/chen/: .main.lua.swp  .mod.json.swp  .pre.lua.swp  main.lua  mdl_chen_head.lua  music.it  pre.lua
pkg/gm/dct/: dct.lua  mod.json  shaders.lua
pkg/gm/exec/: client.lua  mod.json  server.lua
pkg/gm/hitler/: main.lua  mod.json  pre.lua
pkg/gm/hopbot/: main.lua  mod.json
pkg/gm/portalgun/: gun_portal.lua  hook_map.lua  hook_player.lua  main.lua  mod.json  portalgun.kv6  preload.lua
pkg/gm/rt/: main.lua  mod.json  shader_map.frag
pkg/iceball/aimbot/: mod.json  mod_aimbot.lua
pkg/iceball/altgame/: client_start.lua  main_client.lua  main_server.lua
pkg/iceball/config/: font-large.tga  (+4 more)
pkg/maps/: gen_classic.lua.tga  gencity.lua  mesa.vxl.tga
pkg/rakiru/: credits.txt
source/: logtxt.c  lua.c  lua_base.h  lua_image.h  lua_map.h  main.c  model.c  network.c  path.c
src/: CMakeLists.txt  dsp.c  font.c  img.c  json.c  lua.c  lua_base.h  lua_bin.h  lua_camera.h  lua_fbo.h  lua_fetch.h  lua_fetch.h.orig  lua_font.h  lua_gfx.h  lua_glsl.h  lua_image.h  lua_input.h  lua_json.h  lua_map.h  lua_model.h  lua_mus.h  lua_net.h  lua_random.h  lua_tcp.h  lua_ttf.h  lua_udp.h  lua_util.h  lua_va.h  lua_wav.h  lutf8lib.c  main.c  map.c  model.c  network.c  path.c  png.c  random.c  render.c  ttf.c  vecmath.c  (+1 more)
src/gl/: .render.c.swp  glad.c  render.c  render_img.c
src/softgm/: render.c  render_img.c
svsave/: info.txt
svsave/pub/: mods.json  mods_classic.json  server.json
tools/: Xcube.kv6  cube.pmf  fixwav.py  icemap2vxl.py  kv62pmf.py  kv62pmf_Xcube_convert_win.bat  kv62pmf_cube_convert_win.bat  lastsav.vxl  version2json.py  version2markdown.py
xlibinc/sackit/: .gitignore  CMakeLists.txt  NOTES.txt  README.txt  app_compare.c  app_convert.c  app_ezjack.c  app_play.c  app_sfx.c  buildwin.sh  effects.c  ezjack.c  ezjack.h  fixedmath.c  litemixer.c  mixer.c  mixer_float.h  mixer_int.h  mixer_int_fast.h  objects.c  playroutine.c  playroutine_effects.c  playroutine_nna.c  sackit.h  sackit_internal.h  tables.c
(+77 files in other folders)
